--- a/education.html
+++ b/education.html
@@ -3,7 +3,13 @@ layout: default
 title: Education
 ---
 
+<body>
+    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+      <tr style="padding:px">
+        <td style="padding:0px">
+
 <!-- Education -->
+
 
 <button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-education" id="education">
     <h2>Education</h2>
@@ -74,4 +80,6 @@ title: Education
   </tbody></table>
   </div>
   <hr class="soft">
+
+</body>
   
